--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav id="page-nav">
-            <a href="Index.html" id="home">HOME</a>
+            <a href="index.html" id="home">HOME</a>
         </nav>
         <h1>Contact</h1>
         <img src="image/contact.png" alt="mail with angel wings">
