--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     
     <header>
         <nav id="page-nav">
-            <a href="Index.html" id="home">HOME</a>
+            <a href="index.html" id="home">HOME</a>
         </nav>
         <h1>About</h1>
         <img src="image/magnifying-glass.png" alt="Magnifying glass">
