--- a/atlanta.html
+++ b/atlanta.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav id="page-nav">
-            <a href="Index.html" id="home">HOME</a>
+            <a href="index.html" id="home">HOME</a>
             <a href="decatur.html" id="next">NEXT</a>
         </nav>
     <h1>Atlanta</h1>
