--- a/decatur.html
+++ b/decatur.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav id="page-nav">
-            <a href="atlanta.html" id="home">BACK</a>
+            <a href="atlanta.html" id="back">BACK</a>
             <a href="savannah.html" id="next">NEXT</a>
         </nav>
     <h1>Decatur</h1>
