--- a/georgia.html
+++ b/georgia.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav id="page-nav">
-            <a href="Index.html" id="home">HOME</a>
+            <a href="index.html" id="home">HOME</a>
         </nav>
 
     <h1>Georgia</h1>
