--- a/savannah.html
+++ b/savannah.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav id="page-nav">
-            <a href="decatur.html" id="home">BACK</a>
+            <a href="decatur.html" id="back">BACK</a>
             <a href="Index.html" id="next">HOME</a>
         </nav>
     <h1>Savannah</h1>
