--- a/stoneMountain.html
+++ b/stoneMountain.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav id="page-nav">
-            <a href="Index.html" id="back">HOME</a>
+            <a href="index.html" id="home">HOME</a>
             <a href="georgiaAquarium.html" id="next">NEXT</a>
         </nav>
     <h1>Stone Mountain</h1>
