--- a/savannah.html
+++ b/savannah.html
@@ -10,7 +10,7 @@
     <header>
         <nav id="page-nav">
             <a href="decatur.html" id="back">BACK</a>
-            <a href="index.html" id="next">HOME</a>
+            <a href="index.html" id="home">HOME</a>
         </nav>
     <h1>Savannah</h1>
     <h4>"Hostess City of the South."</h4>
