--- a/callawayGardens.html
+++ b/callawayGardens.html
@@ -10,7 +10,7 @@
     <header>
         <nav id="page-nav">
             <a href="georgiaAquarium.html" id="back">BACK</a>
-            <a href="index.html" id="next">HOME</a>
+            <a href="index.html" id="home">HOME</a>
         </nav>
     <h1>Callaway Gardens</h1>
     <h4>"Immerse yourself in nature"</h4>
