--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
         <h2>Major Attractions</h2>
         <ol>
-            <li><a href="StoneMountain.html">Stone Mountain</a></li>
+            <li><a href="stoneMountain.html">Stone Mountain</a></li>
             <li><a href="GeorgiaAquarium.html">Georgia Aquarium</a></li>
             <li><a href="CallawayGardens.html">Callaway Gardens</a></li>
         </ol>
