--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h2>Major Attractions</h2>
         <ol>
             <li><a href="stoneMountain.html">Stone Mountain</a></li>
-            <li><a href="GeorgiaAquarium.html">Georgia Aquarium</a></li>
-            <li><a href="CallawayGardens.html">Callaway Gardens</a></li>
+            <li><a href="georgiaAquarium.html">Georgia Aquarium</a></li>
+            <li><a href="callawayGardens.html">Callaway Gardens</a></li>
         </ol>
      </nav>
     </section>
